Fix Tag Button Centering and Spacing Issues

--- a/src/styles/_tags.scss
+++ b/src/styles/_tags.scss
@@ -27,7 +27,7 @@
 
 .tag--favorite {
   border-color: #ffde59 !important;
-  border-width: 2px !important;
+  border-width: 3px !important;
 }
 
 .tag-icon-button {
